added form validations and code structuring

--- a/src/app/personal-infor/personal-infor.component.html
+++ b/src/app/personal-infor/personal-infor.component.html
@@ -5,41 +5,216 @@
       <form [formGroup]="detailsForm" (ngSubmit)="onSubmit()">
         <div class="form-group">
           <label for="inputName">Name</label>
-          <input class="form-control" type="text" formControlName="name" [ngClass]="{'is-invalid':submitted && f.name.errors}">
-          <div *ngIf="submitted && f.name.errors" class="invalid-feedback">
-              <div *ngIf="f.name.errors.required">Last name is Required</div>
-          </div>
+          <input class="form-control" type="text" formControlName="name" >
+            <div *ngIf="f.name.touched && f.name.invalid" class="alert alert-danger">
+            <div *ngIf="f.name.errors.required">Name is required.</div>
+            <div *ngIf="f.name.errors.minlength">Name cannot be latter character.</div>
+        </div>
         </div>
         <div class="form-group">
           <label for="inputName">Surname</label>
-          <input class="form-control" type="text" formControlName="surname" [ngClass]="{'is-invalid':submitted && f.surname.errors}">
-          <div *ngIf="submitted && f.surname.errors" class="invalid-feedback">
-              <div *ngIf="f.surname.errors.required">Surname is required</div>
-          </div>
+          <input class="form-control" type="text" formControlName="surname" >
+            <div *ngIf="f.surname.touched && f.surname.invalid" class="alert alert-danger">
+            <div *ngIf="f.surname.errors.required">surname is required.</div>
+            <div *ngIf="f.surname.errors.minlength">surname cannot be latter character.</div>
+        </div>
         </div>
           <div class="form-group">
     <label for="exampleFormControlSelect1">Gender</label>
-    <select formControlName="gender" class="form-control" id="exampleFormControlSelect1" [ngClass]="{'is-invalid':submitted  && f.gender.errors}">
+    <select formControlName="gender" class="form-control" id="exampleFormControlSelect1" >
       <option>Male</option>
       <option>Female</option>
     </select>
-          <div *ngIf="submitted && f.gender.errors" class="invalid-feedback">
-                        <div *ngIf="f.gender.errors.required">Gender is required</div>
-                    </div>
+   <div *ngIf="f.gender.touched && f.gender.invalid" class="alert alert-danger">
+            <div *ngIf="f.gender.errors.required">gender is required.</div>
+         
+        </div>
+     
   </div>
      <div class="form-group">
           <label for="inputName">ID Number</label>
-          <input class="form-control" type="number" formControlName="id" [ngClass]="{'is-invalid':submitted  && f.id.errors}">
-              <div *ngIf="submitted && f.id.errors" class="invalid-feedback">
-                        <div *ngIf="f.id.errors.required">ID must be numbers only</div>
-                             <div *ngIf="f.id.errors.minlength">ID must be at least 13 characters</div>
-                
-                    </div>
+          <input class="form-control" type="number"  formControlName="id" >
+              <div *ngIf=" f.id.touched && f.id.invalid" class="alert alert-danger">
+            <div *ngIf="f.id.errors.required">id is required.</div>
+            <div *ngIf="f.id.errors.max">Card number should be 13 numbers.</div>
+        </div> 
         </div>
+  <div class="form-row">
+      <label for="confirm_password">Checkin</label>
+    <div class="col-7">
+
+  <label class="my-1 mr-2" for="inlineFormCustomSelectPref">Preference</label>
+  <select formControlName="dayChckin" class="custom-select my-1 mr-sm-2" id="inlineFormCustomSelectPref">
+    <option selected>Choose...</option>
+    <option >1</option>
+    <option >2</option>
+    <option >3</option>
+    <option >4</option>
+    <option >5</option>
+    <option >6</option>
+    <option >7</option>
+    <option >8</option>
+    <option >9</option>
+    <option >10</option>
+    <option >11</option>
+    <option >12</option>
+    <option >13</option>
+    <option >14</option>
+    <option >15</option>
+    <option >16</option>
+    <option >17</option>
+    <option >18</option>
+    <option >19</option>
+    <option >20</option>
+    <option >21</option>
+    <option >22</option>
+    <option >23</option>
+    <option >24</option>
+    <option >25</option>
+    <option >26</option>
+    <option >27</option>
+    <option >28</option>
+    <option >29</option>
+    <option >30</option>
+    <option >31</option>
+  </select>
+     <div *ngIf="f.dayChckin.touched && f.dayChckin.invalid" class="alert alert-danger">
+                <div *ngIf="f.dayChckin.errors.required">Password is required.</div>
+                <div *ngIf="f.dayChckin.errors.dayLessThan">Booking date less than currents.</div>
+            </div>
+    </div>
+    <div class="col">
+      <label class="my-1 mr-2" for="inlineFormCustomSelectPref">Preference</label>
+  <select formControlName="monthChckin" class="custom-select my-1 mr-sm-2" id="inlineFormCustomSelectPref">
+    <option selected>Choose...</option>
+    <option >1</option>
+    <option >2</option>
+    <option >3</option>
+    <option >4</option>
+    <option >5</option>
+    <option >6</option>
+    <option >7</option>
+    <option >8</option>
+    <option >9</option>
+    <option >10</option>
+    <option >11</option>
+    <option >12</option>
+   
+  </select>
+     <div *ngIf="f.monthChckin.touched && f.monthChckin.invalid" class="alert alert-danger">
+                <div *ngIf="f.monthChckin.errors.required">Password is required.</div>
+                <div *ngIf="f.monthChckin.errors.monthLessThan">Booking month less than currents.</div>
+            </div>
+    </div>
+    <div class="col">
+     <label class="my-1 mr-2" for="inlineFormCustomSelectPref">Preference</label>
+  <select formControlName="yearChckin" class="custom-select my-1 mr-sm-2" id="inlineFormCustomSelectPref">
+    <option selected>Choose...</option>
+    <option >2019</option>
+    <option >2020</option>
+    <option >2021</option>
+    <option >2022</option>
+    <option >2023</option>
+    <option >2024</option>
+  </select>
+  <div *ngIf="f.yearChckin.touched && f.yearChckin.invalid" class="alert alert-danger">
+                <div *ngIf="f.yearChckin.errors.required">Password is required.</div>
+                <div *ngIf="f.yearChckin.errors.yearLessThan">Booking year less than currents.</div>
+            </div>
+    </div>
+  </div>
+
+
+        
+
+ <div class="form-row">
+      <label for="confirm_password">Checkin</label>
+    <div class="col-7">
+
+  <label class="my-1 mr-2" for="inlineFormCustomSelectPref">Preference</label>
+  <select formControlName="dayChckout" class="custom-select my-1 mr-sm-2" id="inlineFormCustomSelectPref">
+    <option selected>Choose...</option>
+    <option >1</option>
+    <option >2</option>
+    <option >3</option>
+    <option >4</option>
+    <option >5</option>
+    <option >6</option>
+    <option >7</option>
+    <option >8</option>
+    <option >9</option>
+    <option >10</option>
+    <option >11</option>
+    <option >12</option>
+    <option >13</option>
+    <option >14</option>
+    <option >15</option>
+    <option >16</option>
+    <option >17</option>
+    <option >18</option>
+    <option >19</option>
+    <option >20</option>
+    <option >21</option>
+    <option >22</option>
+    <option >23</option>
+    <option >24</option>
+    <option >25</option>
+    <option >26</option>
+    <option >27</option>
+    <option >28</option>
+    <option >29</option>
+    <option >30</option>
+    <option >31</option>
+  </select>
+     <div *ngIf="f.dayChckout.touched && f.dayChckout.invalid" class="alert alert-danger">
+                <div *ngIf="f.dayChckout.errors.required">Password is required.</div>
+                <div *ngIf="f.dayChckout.errors.dayLessThan">Booking date less than currents.</div>
+            </div>
+    </div>
+    <div class="col">
+      <label class="my-1 mr-2" for="inlineFormCustomSelectPref">Preference</label>
+  <select formControlName="monthChckout" class="custom-select my-1 mr-sm-2" id="inlineFormCustomSelectPref">
+    <option selected>Choose...</option>
+    <option >1</option>
+    <option >2</option>
+    <option >3</option>
+    <option >4</option>
+    <option >5</option>
+    <option >6</option>
+    <option >7</option>
+    <option >8</option>
+    <option >9</option>
+    <option >10</option>
+    <option >11</option>
+    <option >12</option>
+   
+  </select>
+     <div *ngIf="f.monthChckout.touched && f.monthChckout.invalid" class="alert alert-danger">
+                <div *ngIf="f.monthChckout.errors.required">Password is required.</div>
+                <div *ngIf="f.monthChckout.errors.outLessThanIn">Booking month less than currents.</div>
+            </div>
+    </div>
+    <div class="col">
+     <label class="my-1 mr-2" for="inlineFormCustomSelectPref">Preference</label>
+  <select formControlName="yearChckout" class="custom-select my-1 mr-sm-2" id="inlineFormCustomSelectPref">
+    <option selected>Choose...</option>
+    <option >2019</option>
+    <option >2020</option>
+    <option >2021</option>
+    <option >2022</option>
+    <option >2023</option>
+    <option >2024</option>
+  </select>
+  <div *ngIf="f.yearChckout.touched && f.yearChckout.invalid" class="alert alert-danger">
+                <div *ngIf="f.yearChckout.errors.required">Password is required.</div>
+                <div *ngIf="f.yearChckout.errors.outLessThanIn">Booking year less than currents.</div>
+            </div>
+    </div>
+  </div>
 
 
   <div class="form-group">
-          <button class="btn btn-success btn-lg btn-block" type="submit">Register</button>
+          <button class="btn btn-success btn-lg btn-block" type="submit" [disabled] = "!detailsForm.valid"  >Register</button>
         </div>
         
       </form>
